# fusionamm-sdk

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  turbo.json
audit/: OShield-fusionamm-report-23-July-2025.md
programs/fusionamm/: package.json
rust-sdk/client/: CHANGELOG.md  Cargo.toml  README.md  codama.js  package.json
rust-sdk/client/src/: consts.rs  lib.rs
rust-sdk/client/src/core_types/: fusion_pool.rs  limit_order.rs  mod.rs  position.rs  tick_array.rs  tick_range.rs
rust-sdk/client/src/gpa/: fusion_pool.rs  fusion_pools_config.rs  limit_order.rs  mod.rs  position.rs  position_bundle.rs  tick_array.rs  token_badge.rs  utils.rs
rust-sdk/client/src/pda/: fusion_pool.rs  fusion_pools_config.rs  limit_order.rs  mod.rs  position.rs  position_bundle.rs  tick_array.rs  token_badge.rs
rust-sdk/core/: CHANGELOG.md  Cargo.toml  README.md  package.json
rust-sdk/core/src/: lib.rs
rust-sdk/core/src/constants/: bundle.rs  error.rs  mod.rs  swap.rs  tick.rs  token.rs
rust-sdk/core/src/math/: bundle.rs  limit_order.rs  mod.rs  position.rs  price.rs  tick.rs  tick_array.rs  tick_array_sequence_vec.rs  token.rs  u256_math.rs
rust-sdk/core/src/quote/: fees.rs  limit_order.rs  liquidity.rs  mod.rs  order_book.rs  swap.rs
rust-sdk/core/src/types/: fees.rs  limit_order.rs  liquidity.rs  mod.rs  pool.rs  position.rs  swap.rs  tick.rs  tick_array.rs  token.rs  u128.rs  u64.rs
rust-sdk/fusionamm-sdk/: CHANGELOG.md  Cargo.toml  README.md  package.json
rust-sdk/fusionamm-sdk/src/: account.rs  config.rs  create_pool.rs  decrease_liquidity.rs  e2e.rs  harvest.rs  increase_liquidity.rs  lib.rs  limit_order.rs  pool.rs  position.rs  swap.rs  token.rs
rust-sdk/fusionamm-sdk/src/tests/: anchor.rs  mod.rs  program.rs  rpc.rs  token.rs  token_extensions.rs
rust-sdk/integration/: CHANGELOG.md  LICENSE  README.md  index.test.ts  package.json
rust-sdk/integration/client/serde/: Cargo.toml
rust-sdk/integration/client/solana-1.18/: Cargo.toml
rust-sdk/integration/client/solana-2.0/: Cargo.toml
rust-sdk/integration/client/solana-2.1/: Cargo.toml
rust-sdk/integration/client/solana-2.2/: Cargo.toml
rust-sdk/integration/core/ethnum v1.1/: Cargo.toml
rust-sdk/integration/core/ethnum v1.2/: Cargo.toml
rust-sdk/integration/core/ethnum v1.3/: Cargo.toml
rust-sdk/integration/core/ethnum v1.4/: Cargo.toml
rust-sdk/integration/core/ethnum v1.5/: Cargo.toml
rust-sdk/integration/core/libm v0.1/: Cargo.toml
rust-sdk/integration/core/libm v0.2/: Cargo.toml
rust-sdk/integration/fusionamm/solana-2.2/: Cargo.toml
rust-sdk/macros/: CHANGELOG.md  Cargo.toml  README.md  package.json
rust-sdk/macros/src/: lib.rs  wasm_const.rs  wasm_enum.rs  wasm_fn.rs  wasm_struct.rs
rust-sdk/tx-sender/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
rust-sdk/tx-sender/src/: jito.rs  lib.rs  priority_fee.rs  request_handler.rs  smart_transaction.rs
scripts/: deploy-cargo
ts-sdk/cli/: README.md  package.json  tsconfig.json
ts-sdk/cli/src/: base.ts  rpc.ts
ts-sdk/cli/src/commands/: collect_protocol_fees.ts  decrease_limit_order.ts  decrease_liquidity.ts  fetch_config.ts  fetch_limit_order.ts  fetch_pool.ts  fetch_position.ts  fetch_tick_array.ts  increase_limit_order.ts  increase_liquidity.ts  initialize_config.ts  initialize_pool.ts  reset_pool_price.ts  set_clp_reward_rate.ts  set_clp_to_olp_reward_ratio.ts  set_default_clp_reward_rate.ts  set_default_clp_to_olp_reward_ratio.ts  set_default_order_protocol_fee_rate.ts  set_default_protocol_fee_rate.ts  set_fee_rate.ts  set_order_protocol_fee_rate.ts  set_protocol_fee_rate.ts  swap.ts  swap_quote.ts
ts-sdk/client/: CHANGELOG.md  README.md  codama.js  package.json
ts-sdk/client/src/: consts.ts  index.ts
ts-sdk/client/src/gpa/: fusionPool.ts  fusionPoolsConfig.ts  index.ts  limitOrder.ts  position.ts  positionBundle.ts  tickArray.ts  tokenBadge.ts  utils.ts
ts-sdk/client/src/pda/: fusionPool.ts  fusionPoolsConfig.ts  index.ts  limitOrder.ts  position.ts  positionBundle.ts  tickArray.ts  tokenBadge.ts
ts-sdk/client/tests/: gpa.test.ts
ts-sdk/core/: CHANGELOG.md  Cargo.toml  README.md  package.json  typedoc.json
ts-sdk/core/src/: lib.rs
ts-sdk/core/tests/: size.test.ts  smoke.test.ts  types.test.ts
ts-sdk/fusionamm-sdk/: .eslintrc.js  CHANGELOG.md  README.md  package.json
ts-sdk/fusionamm-sdk/src/: collectProtocolFees.ts  config.ts  createPool.ts  decreaseLiquidity.ts  harvest.ts  increaseLiquidity.ts  index.ts  limitOrder.ts  pool.ts  position.ts  resetPoolPrice.ts  swap.ts  sysvar.ts  token.ts  types.ts
ts-sdk/fusionamm-sdk/tests/: closePosition.test.ts  config.test.ts  createPool.test.ts  decreaseLiquidity.test.ts  e2e.test.ts  harvest.test.ts  increaseLiquidity.test.ts  limitOrder.test.ts  openPosition.test.ts  pool.test.ts  position.test.ts  resetPoolPrice.test.ts  setPositionRange.test.ts  swap.test.ts  sysvar.test.ts  token.test.ts
ts-sdk/fusionamm-sdk/tests/utils/: keypair.ts  mockRpc.ts  program.ts  token.ts  tokenExtensions.ts
ts-sdk/integration/: .prettierrc.cjs  CHANGELOG.md  README.md  index.test.ts  index.ts  package.json
ts-sdk/tx-sender/: CHANGELOG.md  README.md  package.json
ts-sdk/tx-sender/src/: buildTransaction.ts  computeBudget.ts  config.ts  index.ts  jito.ts  priorityFees.ts  sendTransaction.ts
