[package]
name = "fusionamm-client"
version = "1.0.0"
description = "Rust client to interact with on-chain FusionAMM program."
include = ["src/*"]
homepage = "https://fusionamm.com"
license-file = "LICENSE"
repository = "https://github.com/DefiTuna/fusionamm-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["info@fusionamm.com"]
edition = "2021"

[features]
default = ["core-types"]
anchor = ["dep:anchor-lang"]
anchor-idl-build = []
core-types = ["dep:fusionamm-core"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch = ["dep:solana-client", "dep:solana-sdk", "dep:solana-account-decoder"]
solana-v1 = []

[dependencies]
anchor-lang = { version = ">=0.28, <0.31", optional = true }
borsh = { version = "^0.10" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
fusionamm-core = { path = "../core", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
serde-big-array = { version = "^0.5", optional = true }
solana-program = { version = ">=1.16, <3.0" }
solana-sdk = { version = ">=1.16, <3.0", optional = true }
solana-client = { version = ">=1.16, <3.0", optional = true }
solana-account-decoder = { version = ">=1.16, <3.0", optional = true }
thiserror = { version = "^2.0" }
