[package]
name = "fusionamm-client"
version = "1.0.0"
description = "Rust client to interact with on-chain FusionAMM program."
include = ["src/*"]
homepage = "https://fusionamm.com"
license-file = "LICENSE"
repository = "https://github.com/DefiTuna/fusionamm-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["info@fusionamm.com"]
edition = "2021"

[features]
default = ["core-types"]
anchor = ["dep:anchor-lang"]
anchor-idl-build = []
core-types = ["dep:fusionamm-core"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch = []
solana-v1 = []

[dependencies]
# Solana
solana-client = { version = "2.2.0" }
solana-account-decoder = { version = "2.2.0" }
solana-account = { version = "2.2.0" }
solana-program = { version = "2.2.0" }
solana-pubkey = { version = "2.2.0" }
solana-program-entrypoint = { version = "2.2.0" }
solana-decode-error = { version = "2.2.0" }
solana-program-error = { version = "2.2.0" }
solana-msg = { version = "2.2.0" }
solana-instruction = { version = "2.2.0" }
solana-cpi = { version = "2.2.0" }
solana-account-info = { version = "2.2.0" }

# Anchor
anchor-lang = { version = ">=0.28, <0.32", optional = true }

# Other dependencies
borsh = { version = "^0.10" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
fusionamm-core = { path = "../core", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
serde-big-array = { version = "^0.5", optional = true }
thiserror = { version = "^2.0" }
