[package]
name = "fusionamm-tx-sender"
version = "1.0.2"
homepage = "https://fusionamm.com"
description = "Library for building and sending Solana transactions with support for priority fees and Jito tips."
license-file = "LICENSE"
repository = "https://github.com/DefiTuna/fusionamm-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
# Solana
solana-client = { version = "^2.2" }
solana-program = { version = "^2.2" }
solana-pubkey = { version = "^2.2" }
solana-instruction = { version = "^2.2" }
solana-message = { version = "^2.2" }
solana-system-interface = { version = ">=1.0, <2.0" }
solana-commitment-config = { version = "^2.2" }
solana-transaction = { version = "^2.2" }
solana-transaction-error = { version = "^2.2" }
solana-transaction-status = { version = "^2.2" }
solana-keypair = { version = "^2.2" }
solana-signer = { version = "^2.2" }
solana-signature = { version = "^2.2" }
solana-compute-budget-interface = { version = "^2.2" }

# Other dependencies
bs58 = { version = "^0.5" }
thiserror = { version = "2.0" }
bincode = "1.3.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
rand = "0.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
tokio = "1.44.2"
futures-util = "0.3"