[package]
name = "fusionamm_integration_solana_v2_2"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
solana-account-decoder = { version = "2.2.7" }
solana-sdk = { version = "2.2.0" }
spl-associated-token-account = { version = "~6.0.0" }
spl-token = { version = "~7.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "~6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~7.0.0", features = ["no-entrypoint"] }
solana-program = { version = "2.2.0" }
fusionamm-sdk = { path = "../../../fusionamm-sdk" }
